Bug 907167: The moz_login dropdown collapses when I move over its entries

--- a/skins/contrib/Mozilla/global.css
+++ b/skins/contrib/Mozilla/global.css
@@ -205,7 +205,7 @@ hr {
     padding: 4px;
     position: absolute;
     right: -1px;
-    top: 26px;
+    margin-top: 4px;
     z-index: 2;
     text-align: left;
 }
